--- a/homepage.html
+++ b/homepage.html
@@ -107,14 +107,22 @@
                 <div class="col s6">
                     <h3>Search Artist</h3>
                     <div class="input-field">
-                        <input type="text" class="white grey-text">
+                        <i class="material-icons"> music_note</i>
+                        <input id="artistSearch" type="text" class="white grey-text">
                     </div>
                 </div>
                 <div class="col s6">
                     <h3>Search Location</h3>
-                    <div class="input-field">
-                        <input type="text" class="white grey-text">
+                    <div class="input-field location">
+                        <i class="material-icons"> add_location </i>
+                        <input id="locationSearch" type="text" class="white grey-text">
                     </div>
+                </div>
+            </div>
+            <div row>
+                <div class="col-12 col-md-3">
+                    <button id="hack-it" type="submit" class="btn btn-block btn-lg btn-primary"> Hack It!
+                    </button>
                 </div>
             </div>
         </div>
@@ -125,7 +133,7 @@
         <h2> Upcoming Events </h2>
         <div class="container">
             <div id="card-row" class="row">
-                <div class="col s12 m4">
+                <div id="card-row-container" class="col s12 m4 d-flex justify-content-between">
                     <div class="card">
                         <div class="card-image">
                             <img src="../project-1/assets/images/Concertimg1.jpg">
@@ -135,7 +143,8 @@
                         </div>
                         <div class="card-content">
                             <span class="card-title"> Artist Name</span>
-                            <span id="Location"></span>
+                            <span id="location"></span>
+                            <span id="venue"></span>
                             <span id="date"></span>
                         </div>
                         <div class="card-action">
@@ -186,7 +195,7 @@
         <h2> Trending </h2>
         <div class="container">
             <div id="card-row" class="row">
-                <div class="col s12 m4">
+                <div class="col s12 m4 d-flex justify-content-between">
                     <div class="card">
                         <div class="card-image">
                             <img src="../project-1/assets/images/Concertimg1.jpg">
@@ -244,7 +253,7 @@
         <h2> Merchandise </h2>
         <div class="container">
             <div id="card-row" class="row">
-                <div class="col s12 m4">
+                <div class="col s12 m4 d-flex justify-content-between">
                     <div class="card">
                         <div class="card-image">
                             <img src="../project-1/assets/images/Concertimg1.jpg">
@@ -310,6 +319,7 @@
     </script>
     <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
     <script src="assets/javascript/materialize.js"></script>
+    <script src="assets/javascript/tm-api.js"></script>
 
 </body>
 
