--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                             <a href="#merchandise"> Merchandise </a>
                         </li>
                         <li>
+                            <a href="#user-favorites"> Your Favorites </a>
+                        </li>
+                        <li>
                             <a href="#contact"> Contact </a>
                         </li>
                     </ul>
@@ -134,7 +137,7 @@
         <div class="container">
             <div id="card-row" class="row">
                 <div id="card-row-container" class="col s12 m4 d-flex justify-content-between">
-                    <div class="card">
+                    <div class="card sticky-action">
                         <div class="card-image">
                             <img src="../project-1/assets/images/Concertimg1.jpg">
                             <a href="#" class="halfway-fab btn-floating pink pulse">
@@ -143,16 +146,21 @@
                         </div>
                         <div class="card-content">
                             <span class="card-title"> Artist Name</span>
+                            <span class="card-title activator grey-text text-darken-4">Details<i
+                                    class="material-icons right">more_vert</i></span>
                             <span id="location"></span>
                             <span id="venue"></span>
                             <span id="date"></span>
                         </div>
                         <div class="card-action">
-                            <a href="#"> Details </a>
                             <a href="#"> Buy Tickets </a>
                         </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Card Title<i
+                                    class="material-icons right">close</i></span>
+                        </div>
                     </div>
-                    <div class="card">
+                    <div class="card sticky-action">
                         <div class="card-image">
                             <img src="../project-1/assets/images/Concertimg1.jpg">
                             <a href="#" id="favorite-button" class="halfway-fab btn-floating pink pulse">
@@ -161,6 +169,8 @@
                         </div>
                         <div class="card-content">
                             <span class="card-title"> Artist Name</span>
+                            <span class="card-title activator grey-text text-darken-4">Details<i
+                                    class="material-icons right">more_vert</i></span>
                             <span id="Location"></span>
                             <span id="date"></span>
                         </div>
@@ -168,8 +178,12 @@
                             <a href="#"> Details </a>
                             <a href="#"> Buy Tickets </a>
                         </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Card Title<i
+                                    class="material-icons right">close</i></span>
+                        </div>
                     </div>
-                    <div class="card">
+                    <div class="card sticky-action">
                         <div class="card-image">
                             <img src="../project-1/assets/images/Concertimg1.jpg">
                             <a href="#" id="favorite-button" class="halfway-fab btn-floating pink pulse">
@@ -178,12 +192,18 @@
                         </div>
                         <div class="card-content">
                             <span class="card-title"> Artist Name</span>
+                            <span class="card-title activator grey-text text-darken-4">Details<i
+                                    class="material-icons right">more_vert</i></span>
                             <span id="Location"></span>
                             <span id="date"></span>
                         </div>
                         <div class="card-action">
                             <a href="#"> Details </a>
                             <a href="#"> Buy Tickets </a>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Card Title<i
+                                    class="material-icons right">close</i></span>
                         </div>
                     </div>
                 </div>
@@ -196,7 +216,7 @@
         <div class="container">
             <div id="card-row" class="row">
                 <div class="col s12 m4 d-flex justify-content-between">
-                    <div class="card">
+                    <div class="card sticky-action">
                         <div class="card-image">
                             <img src="../project-1/assets/images/Concertimg1.jpg">
                             <a href="#" id="like-button" class="halfway-fab btn-floating green pulse">
@@ -205,14 +225,20 @@
                         </div>
                         <div class="card-content">
                             <span class="card-title"> Headline</span>
+                            <span class="card-title activator grey-text text-darken-4">Card Title<i
+                                    class="material-icons right">more_vert</i></span>
                             <span id="Location"></span>
                             <span id="date"></span>
                         </div>
                         <div class="card-action">
                             <a href="#"> Details </a>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Card Title<i
+                                    class="material-icons right">close</i></span>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card sticky-action">
                         <div class="card-image">
                             <img src="../project-1/assets/images/Concertimg1.jpg">
                             <a href="#" id="like-button" class="halfway-fab btn-floating green pulse">
@@ -221,14 +247,20 @@
                         </div>
                         <div class="card-content">
                             <span class="card-title"> Headline</span>
+                            <span class="card-title activator grey-text text-darken-4">Card Title<i
+                                    class="material-icons right">more_vert</i></span>
                             <span id="Location"></span>
                             <span id="date"></span>
                         </div>
                         <div class="card-action">
                             <a href="#"> Details </a>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Card Title<i
+                                    class="material-icons right">close</i></span>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card sticky-action">
                         <div class="card-image">
                             <img src="../project-1/assets/images/Concertimg1.jpg">
                             <a href="#" id="like-button" class="halfway-fab btn-floating green pulse">
@@ -237,11 +269,17 @@
                         </div>
                         <div class="card-content">
                             <span class="card-title"> Headline</span>
+                            <span class="card-title activator grey-text text-darken-4">Card Title<i
+                                    class="material-icons right">more_vert</i></span>
                             <span id="Location"></span>
                             <span id="date"></span>
                         </div>
                         <div class="card-action">
                             <a href="#"> Details </a>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Card Title<i
+                                    class="material-icons right">close</i></span>
                         </div>
                     </div>
                 </div>
@@ -249,7 +287,7 @@
         </div>
     </div>
     <!-- Merchandise cards-->
-    <div id="popular merchandise" class="section section-popular scrollspy">
+    <!-- <div id="popular merchandise" class="section section-popular scrollspy">
         <h2> Merchandise </h2>
         <div class="container">
             <div id="card-row" class="row">
@@ -308,7 +346,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
 
 
