--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             <a href="#merchandise"> Merchandise </a>
                         </li>
                         <li>
-                            <a href="#user-favorites"> Your Favorites </a>
+                            <a href="../html-pages/favorites.html"> Favorites </a>
                         </li>
                         <li>
                             <a href="#contact"> Contact </a>
@@ -72,6 +72,9 @@
             </li>
             <li>
                 <a href="#merchandise"> Merchandise </a>
+            </li>
+            <li>
+                <a href="../html-pages/favorites.html"> Favorites </a>
             </li>
             <li>
                 <a href="#contact"> Contact </a>
@@ -140,7 +143,7 @@
                     <div class="card sticky-action">
                         <div class="card-image">
                             <img src="../project-1/assets/images/Concertimg1.jpg">
-                            <a href="#" class="halfway-fab btn-floating pink pulse">
+                            <a href="#" id="event-like-button" class="halfway-fab btn-floating pink pulse">
                                 <i class="material-icons"> favorite </i>
                             </a>
                         </div>
@@ -163,7 +166,7 @@
                     <div class="card sticky-action">
                         <div class="card-image">
                             <img src="../project-1/assets/images/Concertimg1.jpg">
-                            <a href="#" id="favorite-button" class="halfway-fab btn-floating pink pulse">
+                            <a id="favorite-button" class="halfway-fab btn-floating pink pulse">
                                 <i class="material-icons"> favorite </i>
                             </a>
                         </div>
@@ -358,6 +361,7 @@
     <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
     <script src="assets/javascript/materialize.js"></script>
     <script src="assets/javascript/tm-api.js"></script>
+    <script src="../project-1/assets/javascript/favorites.js"></script>
 
 </body>
 
