--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Music Hack</title>
 
-    <link rel="stylesheet" type="text/css" href="../project-1/assets/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="../project-1/assets/css/homepage.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+            <link rel="stylesheet" type="text/css" href="assets/css/homepage.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -18,6 +18,7 @@
     <link href="https://fonts.googleapis.com/css?family=Monoton&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 
 </head>
 
@@ -45,13 +46,13 @@
                             <a href="#trending">Trending </a>
                         </li>
                         <li>
-                            <a href="../project-1/html-pages/merchandise.html"> Merchandise </a>
+                            <a href="html-pages/merchandise.html"> Merchandise </a>
                         </li>
                         <li>
-                            <a href="../html-pages/favorites.html"> Favorites </a>
+                            <a href="html-pages/favorites.html"> Favorites </a>
                         </li>
                         <li>
-                            <a href="#contact"> Contact </a>
+                            <a href="html-pages/contact.html"> Contact </a>
                         </li>
                     </ul>
                 </div>
@@ -142,7 +143,7 @@
                 <div id="card-row-container" class="col s12 m4 d-flex justify-content-between">
                     <div class="card sticky-action">
                         <div class="card-image">
-                            <img src="../project-1/assets/images/Concertimg1.jpg">
+                            <img src="assets/images/Concertimg1.jpg">
                             <a href="#" id="event-like-button" class="halfway-fab btn-floating pink pulse">
                                 <i class="material-icons"> favorite </i>
                             </a>
@@ -165,7 +166,7 @@
                     </div>
                     <div class="card sticky-action">
                         <div class="card-image">
-                            <img src="../project-1/assets/images/Concertimg1.jpg">
+                            <img src="assets/images/Concertimg1.jpg">
                             <a id="favorite-button" class="halfway-fab btn-floating pink pulse">
                                 <i class="material-icons"> favorite </i>
                             </a>
@@ -188,7 +189,7 @@
                     </div>
                     <div class="card sticky-action">
                         <div class="card-image">
-                            <img src="../project-1/assets/images/Concertimg1.jpg">
+                            <img src="assets/images/Concertimg1.jpg">
                             <a href="#" id="favorite-button" class="halfway-fab btn-floating pink pulse">
                                 <i class="material-icons"> favorite </i>
                             </a>
@@ -221,7 +222,7 @@
                 <div id="trending-container" class="col s12 m4 d-flex justify-content-between">
                     <div class="card sticky-action">
                         <div class="card-image">
-                            <img src="../project-1/assets/images/Concertimg1.jpg">
+                            <img src="assets/images/Concertimg1.jpg">
                             <a href="#" id="like-button" class="halfway-fab btn-floating green pulse">
                                 <i id="check-icon" class="material-icons"> check </i>
                             </a>
@@ -243,7 +244,7 @@
                     </div>
                     <div class="card sticky-action">
                         <div class="card-image">
-                            <img src="../project-1/assets/images/Concertimg1.jpg">
+                            <img src="assets/images/Concertimg1.jpg">
                             <a href="#" id="like-button" class="halfway-fab btn-floating green pulse">
                                 <i class="material-icons"> check </i>
                             </a>
@@ -265,7 +266,7 @@
                     </div>
                     <div class="card sticky-action">
                         <div class="card-image">
-                            <img src="../project-1/assets/images/Concertimg1.jpg">
+                            <img src="assets/images/Concertimg1.jpg">
                             <a href="#" id="like-button" class="halfway-fab btn-floating green pulse">
                                 <i class="material-icons"> check </i>
                             </a>
@@ -297,7 +298,7 @@
                 <div class="col s12 m4 d-flex justify-content-between">
                     <div class="card">
                         <div class="card-image">
-                            <img src="../project-1/assets/images/Concertimg1.jpg">
+                            <img src="assets/images/Concertimg1.jpg">
                             <a href="#" id="shop-button" class="halfway-fab btn-floating blue pulse">
                                 <i class="material-icons"> add_shopping_cart </i>
                             </a>
@@ -314,7 +315,7 @@
                     </div>
                     <div class="card">
                         <div class="card-image">
-                            <img src="../project-1/assets/images/Concertimg1.jpg">
+                            <img src="assets/images/Concertimg1.jpg">
                             <a href="#" id="shop-button" class="halfway-fab btn-floating blue pulse">
                                 <i class="material-icons"> add_shopping_cart </i>
                             </a>
@@ -331,7 +332,7 @@
                     </div>
                     <div class="card">
                         <div class="card-image">
-                            <img src="../project-1/assets/images/Concertimg1.jpg">
+                            <img src="assets/images/Concertimg1.jpg">
                             <a href="#" id="shop-button" class="halfway-fab btn-floating blue pulse">
                                 <i class="material-icons"> add_shopping_cart </i>
                             </a>
@@ -363,7 +364,7 @@
     <script src="assets/javascript/news-api.js"></script>
     <script src="assets/javascript/tm-api.js"></script>
     <script src="assets/javascript/logic.js"></script>
-    <script src="../project-1/assets/javascript/favorites.js"></script>
+    <script src="assets/javascript/favorites.js"></script>
 
 </body>
 
