--- a/html-pages/contact.html
+++ b/html-pages/contact.html
@@ -33,7 +33,7 @@
     .card {
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
       max-width: 300px;
-      height: 500px;
+      height: 520px;
       margin: auto;
       text-align: center;
       font-family: arial;
@@ -138,7 +138,7 @@
     <div class="row">
       <div class="card col-md-3">
         <img src="../assets/images/will.png" alt="John" style="width:100%" height="250" />
-        <h1>Will Parks</h1>
+        <h2>Will</h1>
         <p class="title">Web Developer</p>
         <p>California</p>
         <div style="margin: 24px 0;">
@@ -154,7 +154,7 @@
 
       <div class="card col-md-3 ">
         <img src="../assets/images/nivi.jpj.png" alt="John" style="width:100%" height="250" />
-        <h1>Nivi Amanjee</h1>
+        <h1>Nivi</h1>
         <p class="title">Web Developer</p>
         <p>California</p>
         <div style="margin: 24px 0;">
@@ -167,7 +167,7 @@
 
       <div class="card col-md-3">
         <img src="../assets/images/geetha.jpg" alt="John" style="width:100%" height="250" />
-        <h1>Geetha S</h1>
+        <h1>Geetha</h1>
         <p class="title">Web Developer</p>
         <p>California</p>
         <div style="margin: 24px 0;">
