--- a/index.html
+++ b/index.html
@@ -401,6 +401,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
     <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.1/dist/jquery.validate.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-auth.js"></script>
     <script src="assets/javascript/materialize.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/places.js@1.17.0"></script>
     <script src="assets/javascript/news-api.js"></script>
@@ -409,7 +412,7 @@
     <script src="assets/javascript/favorites.js"></script>
     <script src="assets/javascript/autocomplete.js"></script>
     <script src="assets/javascript/firebase.js"></script>
-    <script src="assets/javascript/login.js"></script>
+    <!-- <script src="assets/javascript/login.js"></script> -->
 
 
 
